# you-have-mail-cli

./: Cargo.toml  README.md
.github/workflows/: checks.yml
src/: cfg.rs  logging.rs  main.rs  utils.rs
src/notifiers/: mod.rs  ntfy_notifier.rs  stdout_notifier.rs  unified_push.rs
src/secrets/: keyring_secrets.rs  mod.rs  plain_secrets.rs
